test/asm/lexer-hack.err
error: lexer-hack.asm(22):
    "Label1" is not a macro
error: lexer-hack.asm(24):
    'mac' already defined at lexer-hack.asm(1)
error: lexer-hack.asm(27):
    Undefined macro "undef"
error: lexer-hack.asm(28):
    Undefined macro "undef"
Assembly aborted with 4 errors!
